2011-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Take into account the decorations the computing menu entry width.

	* grub-core/gfxmenu/widget-box.c (get_border_width): New function.
	(grub_gfxmenu_create_box): Register get_border_width.
	* grub-core/gfxmenu/gui_list.c (draw_menu): Use get_border_width
	if available.
	* include/grub/gfxwidgets.h (grub_gfxmenu_box): New member
	get_border_width.

2011-04-18  Endres Puschner <code@e7p.de>

	* grub-core/gfxmenu/icon_manager.c (grub_gfxmenu_icon_manager_get_icon):
	Don't skip first class.

2011-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_read_logical): Support huge
	chunks.
	* include/grub/err.h (grub_err_t): New enum value GRUB_ERR_BUG.

2011-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Complete 64-bit division support.

	* grub-core/kern/misc.c (grub_divmod64): Rename to ...
	(grub_divmod64_full): ... this. Support 64-bit divisor and reminder.
	* include/grub/misc.h (grub_divmod64): Rename to ...
	(grub_divmod64_full): ... this.
	(grub_divmod64): New inline function.

2011-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Add forgotten comma.

2011-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Update fwstart.img hash after
	performing the necessary test.

2011-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (multiboot.elf): Add -Wl,--build-id=none.
	(kfreebsd.elf): Likewise.
	(pc-chainloader.elf): Likewise.
	(ntldr.elf): Likewise.

2011-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Identify RAID by its UUID rather than (guessed) name.

	* grub-core/disk/raid.c (ascii2hex): New function.
	(grub_raid_open): Accept mduuid/%s specification.
	* grub-core/kern/emu/getroot.c (get_mdadm_name): Revamped into ...
	(get_mdadm_uuid): ... this.
	(grub_util_get_grub_dev): Use mduuid/%s if UUID is available.

2011-04-16  Vladimir Serbinenko  <phcoder@gmail.com>
